--- a/css/estilo.css
+++ b/css/estilo.css
@@ -40,3 +40,13 @@ table img{
 .span3 img{
     height: 100px;
 }
+h1,
+h2,
+h3,
+h4,
+h5 {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
