--- a/css/estilo.css
+++ b/css/estilo.css
@@ -9,21 +9,21 @@
 body {
     padding-top: 40px;
     padding-bottom: 10px;
-    background: #6db3f2; /* Old browsers */
-    background: -moz-linear-gradient(top,  #6db3f2 0%, #54a3ee 50%, #3690f0 51%, #1e69de 100%); /* FF3.6+ */
-    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#6db3f2), color-stop(50%,#54a3ee), color-stop(51%,#3690f0), color-stop(100%,#1e69de)); /* Chrome,Safari4+ */
-    background: -webkit-linear-gradient(top,  #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%); /* Chrome10+,Safari5.1+ */
-    background: -o-linear-gradient(top,  #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%); /* Opera 11.10+ */
-    background: -ms-linear-gradient(top,  #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%); /* IE10+ */
-    background: linear-gradient(to bottom,  #6db3f2 0%,#54a3ee 50%,#3690f0 51%,#1e69de 100%); /* W3C */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#6db3f2', endColorstr='#1e69de',GradientType=0 ); /* IE6-9 */
+    background: #cedbe9; /* Old browsers */
+    background: -moz-linear-gradient(top,  #cedbe9 0%, #aac5de 17%, #6199c7 50%, #3a84c3 51%, #419ad6 59%, #4bb8f0 71%, #3a8bc2 84%, #26558b 100%); /* FF3.6+ */
+    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#cedbe9), color-stop(17%,#aac5de), color-stop(50%,#6199c7), color-stop(51%,#3a84c3), color-stop(59%,#419ad6), color-stop(71%,#4bb8f0), color-stop(84%,#3a8bc2), color-stop(100%,#26558b)); /* Chrome,Safari4+ */
+    background: -webkit-linear-gradient(top,  #cedbe9 0%,#aac5de 17%,#6199c7 50%,#3a84c3 51%,#419ad6 59%,#4bb8f0 71%,#3a8bc2 84%,#26558b 100%); /* Chrome10+,Safari5.1+ */
+    background: -o-linear-gradient(top,  #cedbe9 0%,#aac5de 17%,#6199c7 50%,#3a84c3 51%,#419ad6 59%,#4bb8f0 71%,#3a8bc2 84%,#26558b 100%); /* Opera 11.10+ */
+    background: -ms-linear-gradient(top,  #cedbe9 0%,#aac5de 17%,#6199c7 50%,#3a84c3 51%,#419ad6 59%,#4bb8f0 71%,#3a8bc2 84%,#26558b 100%); /* IE10+ */
+    background: linear-gradient(to bottom,  #cedbe9 0%,#aac5de 17%,#6199c7 50%,#3a84c3 51%,#419ad6 59%,#4bb8f0 71%,#3a8bc2 84%,#26558b 100%); /* W3C */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#cedbe9', endColorstr='#26558b',GradientType=0 ); /* IE6-9 */
 
 }
 .sidebar-nav {
-    padding: 9px 0;
+    padding: 5px;
 }
 .tab-content{
-    max-height: 220px;
+    max-height: 238px;
 }
 .small{
     max-height: 200px;
@@ -51,12 +51,12 @@ table img{
     width: 70px;
     height: 70px;
 }
+.span6 img{
+    width: 70px;
+    height: 70px;
+}
 
-h1 small,
-h2 small,
-h3 small,
-h4 small,
-h5 small{
+h1,h2,h3{
     padding-top: 0px;
     padding-bottom: 0px;
     margin-top: 0px;
@@ -73,7 +73,7 @@ footer p{
     padding: 0;
 }
 body {
-    font: 14px/1.4 Georgia, Serif;
+    font: 13px/1.4 Georgia, Serif;
 }
 #page-wrap {
     margin: 50px;
@@ -144,4 +144,13 @@ and (max-device-width : 480px) {
     body {
         width: 495px;
     }
+}
+
+.well {
+   padding-right: 9px;
+   padding-left: 9px;
+   padding-top: 2px;
+}
+.carousel{
+    height: 40px;
 }
