--- a/EIM/css/estilo.css
+++ b/EIM/css/estilo.css
@@ -141,3 +141,15 @@ only screen and (max-width: 769px),
 .navbar .brand{
    padding-bottom: 0px;
 }
+/*  */
+
+#preview{
+	position:absolute;
+	border:1px solid #ccc;
+	background:#333;
+	padding:5px;
+	display:none;
+	color:#fff;
+	}
+
+/*  */
