--- a/EIM/css/estilo.css
+++ b/EIM/css/estilo.css
@@ -150,6 +150,8 @@ only screen and (max-width: 769px),
 	padding:5px;
 	display:none;
 	color:#fff;
+        max-width: 300px;
+        max-height: 300px;
 	}
 
 /*  */
